fix:layout problem scroll

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -91,10 +91,9 @@ body::-webkit-scrollbar {
 
 #root {
   position: relative;
-  min-height: 100vh;
-  width: 100vw;  
-  overflow-y: auto;
-  overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .bg-full-width {
