--- a/src/sass/layout/_forms.scss
+++ b/src/sass/layout/_forms.scss
@@ -1,5 +1,4 @@
 .form {
-  position: relative;
   padding: 15px 0;
   &__row {
     display:flex;
