--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,5 +1,4 @@
 main {
   width: 100%;
   max-width: $max-width-xl;
-  min-height: calc(100% - 65px);
 }
