--- a/src/sass/layout/_page.scss
+++ b/src/sass/layout/_page.scss
@@ -1,12 +1,16 @@
 .page {
   position: absolute;
-  top: 170px;
+  top: 0;
   left: 50%;
   width: 100%;
   padding:30px 60px;
-  min-height: calc(100vh - 170px);
+  padding-top: 200px;
+  min-height: 100vh;
   z-index: 1;
   transform: translateX(-50%);
+
+  height: 100vh;
+  overflow: auto;
 
   display:flex;
   flex-direction: column;
