--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -1,4 +1,5 @@
 #homepage {
+  position: relative;
   &__intro {
     margin: 0;
   }
@@ -12,14 +13,19 @@
     margin-top: 30px;
   }
 
-  .form__popup {
-    transform: translateY(-180px) translateX(-50%);
+  .form {
+    position: relative;
+    padding-top: 60px;
+    .form__popup {
+      left: 50%;
+      transform: translate(-50%, 20px);
+    }
   }
 
   .bubble {
     position: absolute;
     top: 0;
-    right: 15%;
+    right: 10%;
     z-index: 999;
 
     &__content {
